# cloudproxy

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  TESTING.md  pyproject.toml  requirements.txt  setup.py  slim.report.json  test_cloudproxy.sh
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
cloudproxy/: __init__.py  __main__.py  check.py  credentials.py  main.py  proxy_server.py
cloudproxy-ui/: README.md  babel.config.js  cypress.config.js  package-lock.json  package.json  vitest.config.js  vue.config.js
docs/: api-examples.md  api.md  aws.md  azure.md  digitalocean.md  gcp.md  hetzner.md  python-package-usage.md  rolling-deployments.md  scaleway.md  security.md  vultr.md
examples/: direct_proxy_access.py  package_usage.py
tests/: test_api_providers.py  test_check.py  test_check_multi_account.py  test_credentials_api.py  test_main.py  test_main_additional.py  test_main_entry_point.py  test_main_models.py  test_main_module.py  test_main_routes.py  test_providers_aws_functions.py  test_providers_aws_main.py  test_providers_azure_functions.py  test_providers_azure_integration.py  test_providers_azure_main.py  test_providers_config.py  test_providers_digitalocean_config.py  test_providers_digitalocean_firewall.py  test_providers_digitalocean_functions.py  test_providers_digitalocean_functions_additional.py  test_providers_digitalocean_functions_droplets_all.json  test_providers_digitalocean_main.py  test_providers_digitalocean_main_coverage.py  test_providers_gcp_functions.py  test_providers_gcp_main.py  test_providers_hetzner_functions.py  test_providers_hetzner_main.py  test_providers_manager.py  (+10 more)
(+57 files in other folders)
