[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudproxy"
version = "0.6.23"
authors = [
  { name = "Christian Laffin", email = "christian.laffin@gmail.com" },
]
description = "A tool to manage cloud-based proxies for scraping"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: System :: Networking",
]
dependencies = [
    "requests>=2.32.2",
    "apscheduler>=3.10.4",
    "dateparser>=1.2.0",
    "fastapi>=0.110.0",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.27.1",
    "uvicorn-loguru-integration>=0.3.1",
    "python-digitalocean>=1.17.0",
    "boto3>=1.34.69",
    "urllib3>=2.2.2",
    "aiofiles>=23.2.1",
    "botocore>=1.34.69",
    "hcloud>=2.3.0",
    "google-api-python-client>=2.122.0",
    "anyio>=3.7.1",
    "starlette>=0.36.3",
]

[project.urls]
"Homepage" = "https://github.com/claffin/cloudproxy"
"Bug Tracker" = "https://github.com/claffin/cloudproxy/issues"

[project.optional-dependencies]
test = [
    "pytest>=8.0.2",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.27.0",
]

[project.scripts]
cloudproxy = "cloudproxy.main:start"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["cloudproxy-ui*", "tests*", "docs*", ".github*", "venv*"]

[tool.setuptools.package-data]
cloudproxy = ["providers/user_data.sh"] 